# OTP_backend

./: .gitignore  Bakend_Developers_Role.txt  CMakeLists.txt  README.md  main.cpp
Analysis/: CMakeLists.txt  analysis.cpp  analysis.h  save_js.cpp  save_js.h
GPT 3.5/: apitest.http  openai.cpp
GPT_API/: CMakeLists.txt  openai.cpp  openai.h  test.cpp  test_api.cpp
